--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
     <!-- Имя пользователя -->
+
+    <ImageView
+        android:id="@+id/userImageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/blue"
+         />
+
     <TextView
         android:id="@+id/textViewUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Иванов Иван"
+        android:text=""
         android:textSize="18sp"
         android:textStyle="bold"
+        android:layout_below="@id/userImageView"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"/>
 
@@ -21,7 +33,16 @@
         android:id="@+id/textViewEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="example@example.com"
+        android:text=""
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="8dp"/>
+    <!-- Электронная почта -->
+    <TextView
+        android:id="@+id/textViewIsAdmin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
         android:textSize="16sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"/>
@@ -35,14 +56,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"/>
 
-    <!-- Кнопка изменить пароль -->
-    <Button
-        android:id="@+id/buttonChangePassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Изменить пароль"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"/>
 
     <!-- Кнопка для перехода в список избранных мест -->
     <Button
