--- a/app/src/main/res/layout/activity_edit_place.xml
+++ b/app/src/main/res/layout/activity_edit_place.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
     <LinearLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp"
+        >
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -38,6 +47,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Описание" />
+        <EditText
+            android:id="@+id/editTextLatitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Введите широту"
+            android:inputType="numberDecimal"
+            android:maxLength="10" />
+
+        <EditText
+            android:id="@+id/editTextLongitude"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Введите долготу"
+            android:inputType="numberDecimal"
+            android:maxLength="11"
+            android:layout_below="@id/editTextLatitude"
+            android:layout_marginTop="16dp" />
 
         <Button
             android:id="@+id/saveButton"
@@ -46,10 +72,11 @@
             android:text="Сохранить"
             android:layout_marginTop="16dp"/>
     </LinearLayout>
+    </ScrollView>
     <RelativeLayout
         android:id="@+id/progressBarLayout"
-        android:background="#CCFFFFFF"
         android:layout_width="match_parent"
+        android:layout_centerInParent="true"
         android:layout_height="match_parent">
         <ProgressBar
             android:id="@+id/progressBar"
