--- a/app/src/main/res/layout/activity_place_details.xml
+++ b/app/src/main/res/layout/activity_place_details.xml
@@ -39,6 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewPlaceName"
+            android:layout_margin="5dp"
             android:textSize="18sp"/>
 
         <!-- Описание достопримечательности -->
@@ -47,7 +48,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewCityName"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:layout_marginBottom="10dp"
+            />
+        <Button
+            android:id="@+id/buttonToMap"
+            android:text="Посмотреть на карте"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewDescription"
+            />
 
     </RelativeLayout>
 </ScrollView>
