--- a/app/src/main/res/drawable/rounded_corners.xml
+++ b/app/src/main/res/drawable/rounded_corners.xml
@@ -1,9 +1,4 @@
-<!-- res/drawable/rounded_corners.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners
-        android:topLeftRadius="16dp"
-        android:topRightRadius="16dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"/>
-    <solid android:color="@color/gray"/>
+    <solid android:color="@color/colorAccent"/> <!-- Цвет фона элемента -->
+    <corners android:radius="35dp"/> <!-- Радиус закругления углов -->
 </shape>
