--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -13,6 +13,7 @@
         android:layout_margin="25dp"
         android:background="@color/blue"
         android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
         />
     <Button
         android:id="@+id/buttonChooseImage"
