--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,37 +8,43 @@
         android:id="@+id/layout_place_of_the_day"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
-        android:background="#940000">
-        <TextView
-            android:id="@+id/text_place_of_the_day"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:text="Место дня:"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:textColor="@android:color/black" />
-        <TextView
-            android:id="@+id/name_of_place_of_the_day"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:textSize="18sp"
-            android:textColor="@android:color/black" />
+        android:background="@drawable/rounded_corners"
+        android:layout_margin="10dp">
+
         <ImageView
             android:id="@+id/image_place_of_the_day"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            />
+            android:layout_marginEnd="25dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="5dp"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/text_place_of_the_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Место дня:"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:layout_marginStart="25dp" />
+        <TextView
+            android:id="@+id/name_of_place_of_the_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="25dp" />
 
     </LinearLayout>
 
     <!-- Кнопка "Список всех мест" -->
     <Button
+        android:backgroundTint="@color/green"
         android:id="@+id/button_all_places"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,6 +56,8 @@
 
     <!-- Кнопка "Профиль" -->
     <Button
+        android:backgroundTint="@color/colorPrimary"
+
         android:id="@+id/button_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
