--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,7 +14,8 @@
         android:layout_height="100dp"
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
-        android:background="@color/blue"
+        android:background="@color/colorAccent"
+        android:scaleType="centerCrop"
          />
 
     <TextView
@@ -68,6 +69,7 @@
 
     <!-- Кнопка выхода из профиля -->
     <Button
+        android:backgroundTint="@color/red"
         android:id="@+id/buttonLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
