--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,58 +2,78 @@
 <!-- activity_register.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
     <ImageView
-        android:src="@drawable/avatar_default"
         android:id="@+id/userImageView"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="25dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:background="@color/blue"
+        android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
+        android:src="@drawable/avatar_default"
+        android:scaleType="centerCrop"
         />
-    <Button
-        android:id="@+id/buttonChooseImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Выбрать аватарку"
-        android:layout_below="@id/userImageView"
-        android:layout_marginTop="16dp"/>
-    <EditText
-        android:id="@+id/editTextName"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonChooseImage"
-        android:hint="Имя"
-        />
-    <EditText
-        android:id="@+id/editTextEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Почта"
-        android:inputType="textEmailAddress"
-        android:layout_below="@id/editTextName"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Пароль"
-        android:inputType="textPassword"
-        android:layout_below="@id/editTextEmail"
-        android:layout_marginTop="16dp"/>
+        <Button
+            android:id="@+id/buttonChooseImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/userImageView"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Выбрать аватарку" />
+
+        <EditText
+            android:id="@+id/editTextName"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/buttonChooseImage"
+            android:layout_margin="10dp"
+            android:background="@drawable/rounded_corners"
+            android:hint="Имя"
+            android:paddingStart="20dp" />
+
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/editTextName"
+            android:layout_margin="10dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_corners"
+            android:hint="Почта"
+            android:inputType="textEmailAddress"
+            android:paddingStart="20dp" />
+
+        <EditText
+            android:id="@+id/editTextPassword"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/editTextEmail"
+            android:layout_margin="10dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_corners"
+            android:hint="Пароль"
+            android:inputType="textPassword"
+            android:paddingStart="20dp" />
 
 
-    <Button
-        android:id="@+id/buttonRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Зарегистрироваться"
-        android:layout_below="@id/editTextPassword"
-        android:layout_marginTop="16dp"/>
-
+        <Button
+            android:id="@+id/buttonRegister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/editTextPassword"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="@color/green"
+            android:text="Зарегистрироваться" />
+    </LinearLayout>
     <RelativeLayout
         android:id="@+id/progressBarLayout"
         android:background="#CCFFFFFF"
