--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -3,28 +3,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:gravity="center"
+    >
 
     <EditText
         android:id="@+id/editTextCurrentPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:hint="Текущий пароль"
+        android:background="@drawable/rounded_corners"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="16dp"
+        android:paddingStart="20dp"
         android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/editTextNewPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corners"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:layout_marginTop="16dp"
+        android:paddingStart="20dp"
         android:hint="Новый пароль"
         android:inputType="textPassword"
-        android:layout_marginTop="16dp" />
+         />
 
     <Button
         android:id="@+id/buttonChangePassword"
-        android:layout_width="match_parent"
+        android:layout_width="202dp"
         android:layout_height="wrap_content"
-        android:text="Изменить пароль"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:text="Изменить пароль" />
 
 </LinearLayout>
