--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -23,7 +23,7 @@
             android:id="@+id/buttonChooseImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Выбрать изображение"
+            android:text="@string/choose_image"
             android:layout_marginTop="16dp"/>
         <EditText
             android:id="@+id/editTextName"
